# routes/index.js
@@ -2,7 +2,7 @@
 
 module.exports = (app) => {
     let routeArry = [
-        'auth'
+        'auth', 'employee'
     ];
     for (var i = 0; i < routeArry.length; i++) {
         app.use('/api', require(`../components/${routeArry[i]}/index`));
